# sniff-test

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  grpo_training_colab.ipynb  inference.py  models.py  openenv.yaml  pyproject.toml  snifftest_train.ipynb  training_notebook.ipynb  trl.ipynb
data/: claims_dataset.json  sft_scenarios.json  sft_trajectories.jsonl  test_dataset.json
scripts/: generate_dataset.py  generate_sft_data.py
server/: Dockerfile  __init__.py  adversarial.py  app.py  grader.py  requirements.txt  reward.py  snifftest_environment.py  tools.py  world_state.py
training/: __init__.py  demo_comparison.py  plot_rewards.py  train.py
